Start Linux FFM SQLite provider